# alg-fabbri-IPRJ-UERJ

./: '  .gitignore
.gemini/: settings.json
.github/workflows/: benchmark.yml
alg/: CMakeLists.txt
alg/exercise/: CMakeLists.txt
alg/exercise/homework/: CMakeLists.txt  home-exe  homework.cpp  homework.h  homework_main.cpp
alg/exercise/homework/benchmark/: CMakeLists.txt  bm-homework  bm_homework.cpp
alg/exercise/homework/tests/: CMakeLists.txt  run-tests-homework  test_homework.cpp
alg/graph/: CMakeLists.txt  dynagraph.c  dynagraph.cpp  graph.cpp  graph.h  tree.cpp  tree.h
alg/graph/cmd/: CMakeLists.txt  graph-exe  graph-exe.cpp  main-exe  main.cpp
alg/graph/tests/: CMakeLists.txt  test-graph  test.cpp
alg/list/: CMakeLists.txt  bigString.h  linked_list_string.cpp  linked_list_string.h
alg/list/cmd/: CMakeLists.txt  main.cpp
alg/merge/: CMakeLists.txt  linked_list_string.cpp  sorted_merge_3way.cpp
alg/merge/cmd/: CMakeLists.txt
alg/merge/tests/: CMakeLists.txt
alg/sort/: CMakeLists.txt  sort_char.cpp  sort_char.h
alg/sort/cmd/: CMakeLists.txt  main.cpp
alg/sort/tests/: CMakeLists.txt  test.cpp
dataStructures/: graph_data.json
dev/bench/: data.js
web/graphvisualizer/: index.html  index.js
